syntax = "proto3";

package demo;

option java_package = "com.airwallex.grpc.demo";

service Greeter3 {
  rpc SayHello(HelloRequest3) returns (HelloReply3) {}
}

message HelloRequest3 {
  string name = 1;
}

message HelloReply3 {
  string message = 1;
}
